// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListField component should render with no items and an "add" button 1`] = `
<div>
  <Button
    className="d-flex align-items-center"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    size="sm"
    tag="button"
  >
    <i
      className="material-icons md-2"
    >
      add
    </i>
  </Button>
</div>
`;

exports[`ListField component should render with some items and an "add" button 1`] = `
<div>
  <Row
    className="row"
    key="0"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="flex-grow pr-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <ForwardRef(TextInput)
        className="my-0"
        isRequired={true}
        maxLength={100}
        name="item-0"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        size={300}
        value="foo"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto delete"
      onClick={[Function]}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <i
        className="material-icons md-2 text-danger"
      >
        clear
      </i>
    </Col>
  </Row>
  <Row
    className="row"
    key="1"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="flex-grow pr-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <ForwardRef(TextInput)
        className="my-0"
        isRequired={true}
        maxLength={100}
        name="item-1"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        size={300}
        value="bar"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto delete"
      onClick={[Function]}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <i
        className="material-icons md-2 text-danger"
      >
        clear
      </i>
    </Col>
  </Row>
  <Button
    className="d-flex align-items-center"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    size="sm"
    tag="button"
  >
    <i
      className="material-icons md-2"
    >
      add
    </i>
  </Button>
</div>
`;

exports[`ListField component should render with the max number of items and no "add" button 1`] = `
<div>
  <Row
    className="row"
    key="0"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="flex-grow pr-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <ForwardRef(TextInput)
        className="my-0"
        isRequired={true}
        maxLength={100}
        name="item-0"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        size={300}
        value="foo"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto delete"
      onClick={[Function]}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <i
        className="material-icons md-2 text-danger"
      >
        clear
      </i>
    </Col>
  </Row>
  <Row
    className="row"
    key="1"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      className="flex-grow pr-0"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <ForwardRef(TextInput)
        className="my-0"
        isRequired={true}
        maxLength={100}
        name="item-1"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        size={300}
        value="bar"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto delete"
      onClick={[Function]}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <i
        className="material-icons md-2 text-danger"
      >
        clear
      </i>
    </Col>
  </Row>
  <Button
    className="d-flex align-items-center"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    size="sm"
    tag="button"
  >
    <i
      className="material-icons md-2"
    >
      add
    </i>
  </Button>
</div>
`;
